2006-10-31  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter_item_customlist.c: Fix custom lists so
          that focus does not leave the username/password entry field.
        * gui/greeter/greeter_item_pam.c: Minor cleanup.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.2:
        * NEWS: Updated.
        * configure.ac: Update to new release version.
        * gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_system.c:
	  Back out patch from 10/17 from Sebastien Bacher <seb128@debian.org>
	  since we don't have icons yet.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_ulist.c: Fix minor bug in last commit.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_item_ulist.[ch],
	  gui/greeter_item_pam.c:  Similar usability fixes for gdmgreeter.
	  OK/Cancel buttons are now sensitive/insensitive (but only if 
	  using GTK style buttons), and the userlist now is not shown
	  if there are no users.  Added a new item id "userlist-rect"
	  which can be used to specify the rectangle containing the 
	  userlist, so it can also disappear when the userlist is 
	  empty.
	* gui/greeter/themes/happygnome-list/happygnome.xml:  Now use
	  "userlist-rect" so the alpha rectangle goes away when the
	  list is empty.

2006-10-30  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmconfig.[ch], gdmsession.[ch], greeter/greeter.c,
          greeter_action_language.[ch], greeter_canvas_item.c,
          greeter/greeter_item.h, greeter/greeter_item_customlist.[ch],
          greeter/greeter_item_ulist.c, greeter/greeter_parser.c,
          greeter_session.[ch]: Now support combo style lists in 2.16.
          Patch backported from 2.17 without docs or theme changes.  This
          way these features work in 2.16 but do not break translation.

        * gui/gdmlogin.c: Number of usability fixes for gdmlogin.c.  Now