@@ -1,3 +1,10 @@
+2006-10-31 Erwann Chenede - <erwann.chenede@sun.com>
+
+	Backporting Erwann Chenede's altfile feature to 2.16.
+	* gui/greeter/greeter_parser.c: introduced altfile[n] property
+	  to cater for alternate image file definition.
+	* gui/greeter/greeter_item_customlist.c: Fix casting.
+
 2006-10-31  Brian Cameron  <brian.cameron@sun.com>
 
         * gui/greeter/greeter_item_customlist.c: Fix custom lists so
